Work DB and Login

--- a/Notes/N.DB/N.DB.csproj
+++ b/Notes/N.DB/N.DB.csproj
@@ -41,10 +41,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Interfaces\IEntity.cs" />
+    <Compile Include="Models\Note.cs" />
+    <Compile Include="Models\Role.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Interfaces\IEntityRepository.cs" />
     <Compile Include="Repository\Interfaces\IUserRepository.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Mapping\User.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Mapping\Note.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Mapping\Role.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
