--- a/Notes/Notes/Web.config
+++ b/Notes/Notes/Web.config
@@ -13,6 +13,16 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+
+    <authentication mode="Forms">
+      <forms name="NotesToken" timeout="2880" loginUrl="~/Account/Login" />
+    </authentication>
+    <roleManager enabled="true" defaultProvider="NRoleProviders">
+      <providers>
+        <add name="NRoleProviders" type="Notes.Providers.NRoleProviders" />
+      </providers>
+    </roleManager>
+
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
