--- a/Notes/N.DB/N.DB.csproj
+++ b/Notes/N.DB/N.DB.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Interfaces\IEntityRepository.cs" />
+    <Compile Include="Repository\Interfaces\INoteRepository.cs" />
     <Compile Include="Repository\Interfaces\IUserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
