--- a/Notes/Notes/Notes.csproj
+++ b/Notes/Notes/Notes.csproj
@@ -147,6 +147,7 @@
       <DependentUpon>NotesDB.mdf</DependentUpon>
     </Content>
     <Content Include="Content\download.png" />
+    <Content Include="Scripts\notes.js" />
     <Content Include="Views\Note\Note.cshtml" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -187,7 +188,9 @@
     <Content Include="Views\Note\MyNotes.cshtml" />
     <Content Include="Views\Note\Edit.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Files\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
